# Kronos

./: config.yaml  main.py  pyproject.toml
.trae/documents/: 实现滚动预测（使用真实值）并更新示例.md
examples/: close.ipynb  prediction_batch_example.py  prediction_cn_markets_day.py  prediction_example.py  prediction_rolling_example.py  prediction_wo_vol_example.py
examples/data/: 9988.HK_5m.csv  9988.HK_5m_fmt.csv  9988.HK_5m_test.csv  9988.HK_5m_test_fmt.csv
finetune_csv/: config.yaml  train_sequential.py
