[project]
name = "kronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=1.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
