[project]
name = "kronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.14.0",
    "einops>=0.8.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "huggingface-hub>=1.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openbb>=4.1.3",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pycurl>=7.45.7",
    "safetensors>=0.7.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
